<resources>
    <string name="app_name">RogueOneMoblieComputing</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">connect</string>
    <string name="action_pending">Pending</string>
    <string name="action_friends">Friends</string>
    <string name="CreateTrip">Start a New Trip</string>
    <string name="tags">Add tags separated by comma</string>
    <string name="add_entry">Add Entry</string>
    <string name="action_checkin">Check in</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">address found</string>
    <string name="no_geocoder_available">No geocoder available</string>
</resources>
