<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/connect"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_connect"
        android:title="@string/action_connect"
        app:showAsAction="always" />
    <item
        android:id="@+id/pending"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_pending"
        android:title="@string/action_pending"
        app:showAsAction="always" />
    <item
        android:id="@+id/friends"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_friends"
        android:title="@string/action_friends"
        app:showAsAction="always" />
    <item
        android:id="@+id/checkin"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_checkin"
        android:title="@string/action_checkin"
        app:showAsAction="always" />
</menu>
